# gd-secret-api

./: .gitignore  README.md  README_API_EXAMPLES.md  gradient_descent.ipynb  gradient_descent_api_gd_loop.ipynb  gradient_descent_assignment.ipynb  gradient_descent_demo.ipynb  gradient_descent_examples.ipynb  main.py  pca_8x8.ipynb  pyproject.toml  pytest.ini  service_ip.py  test_api.py  test_api_1d.py  test_api_1d_with_grad.py  test_api_2d.py  test_api_discovery.py
app/: datasets.py  functions.py  problem.py  registry.py  routes.py  schemas.py
app/data/: quadratic_classification.npz  ridge_100d_dataset.npz
config/: settings.py
scripts/: create_ridge_dataset.py
tests/: conftest.py  test_api_1d.py  test_api_1d_with_grad.py  test_api_2d.py  test_api_discovery.py
