[project]
name = "gd-secret-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
	"fastapi>=0.136.3",
	"matplotlib>=3.10.9",
	"numpy>=2.4.6",
	"pytest>=9.0.3",
	"requests>=2.34.2",
	"uvicorn>=0.49.0",
]

[project.optional-dependencies]
dev = [
	"jupyter>=1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
]

